--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.2",
+    "@mui/x-date-pickers": "^6.10.2",
     "@table-library/react-table-library": "^4.1.4",
+    "@wojtekmaj/react-daterange-picker": "^5.4.1",
     "chart.js": "^4.3.2",
-    "faker": "5.5.3",
+    "dayjs": "^1.11.9",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/faker": "5.5.9",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
